# mental-math-eeg-classification

./: .gitignore  cuda_test.py  main.py  pyproject.toml
configs/: fast.yaml
reports/: baseline_report_table.md  baseline_results.csv  baseline_summary.csv  cnn_lstm_report_table.md  cnn_lstm_results.csv  cnn_lstm_summary.csv
reports/10s_windows/: baseline_results.csv  baseline_summary.csv  cnn_lstm_results.csv  cnn_lstm_summary.csv
reports/5s_windows/: baseline_results.csv  baseline_summary.csv  cnn_lstm_results.csv  cnn_lstm_summary.csv
reports/checkpoints_cnn_lstm/: fold10_best.pt  fold11_best.pt  fold12_best.pt  fold13_best.pt  fold14_best.pt  fold15_best.pt  fold16_best.pt  fold17_best.pt  fold18_best.pt  fold19_best.pt  fold1_best.pt  fold20_best.pt  fold21_best.pt  fold22_best.pt  fold23_best.pt  fold24_best.pt  fold25_best.pt  fold26_best.pt  fold27_best.pt  fold28_best.pt  fold29_best.pt  fold2_best.pt  fold30_best.pt  fold31_best.pt  fold32_best.pt  fold33_best.pt  fold34_best.pt  fold35_best.pt  fold36_best.pt  fold3_best.pt  fold4_best.pt  fold5_best.pt  fold6_best.pt  fold7_best.pt  fold8_best.pt  fold9_best.pt
reports/transformer_results.csv/: transformer_results.csv
runs/transformer_experiment/: events.out.tfevents.1758371572.The-Blue-Box.23740.0  events.out.tfevents.1758371859.The-Blue-Box.31560.0  events.out.tfevents.1758371911.The-Blue-Box.14032.0  events.out.tfevents.1758371954.The-Blue-Box.19684.0
src/features/: extract_features.py
src/io/: read_edf.py
src/model/: dummy_transformer.py
src/models/: baseline_eval.py  cnn_lstm.py  (+4 more)
(+75 files in other folders)
